--- a/client/angular.json
+++ b/client/angular.json
@@ -33,7 +33,8 @@
               "./node_modules/bootswatch/dist/darkly/bootstrap.css",
               "./node_modules/font-awesome/css/font-awesome.css",
               "./node_modules/ngx-toastr/toastr.css",
-              "src/styles.css"
+              "src/styles.css",
+              "src/app/css/ngxStyles.css"
             ],
             "scripts": []
           },
